@@ -117,7 +117,7 @@ int LsCache::Find(FileAccess *p_loc,const char *a,int m,const char **d,int *l)
    LsCache *scan;
    for(scan=chain; scan; scan=scan->next)
    {
-      if(scan->mode==m && !strcmp(scan->arg,a) && p_loc->SameLocationAs(scan->loc))
+      if((m == -1 || scan->mode==m) && !strcmp(scan->arg,a) && p_loc->SameLocationAs(scan->loc))
       {
 	 if(d && l)
 	 {
@@ -242,4 +242,55 @@ void LsCache::Changed(change_mode m,FileAccess *f,const char *dir)
       }
       scan=&scan[0]->next;
    }
+}
+
+int LsCache::IsDirectory(FileAccess *p_loc,const char *dir_c)
+{
+   if(*dir_c && dir_c[strlen(dir_c)-1] == '/')
+      return 1;
+
+   char *origdir = xstrdup(p_loc->GetCwd());
+
+   /* (This is cheap, so do this first.)  We know the path is a directory
+    * if we have a cache entry for it.  This is true regardless of the list
+    * type. */
+   /* TODO: or if we have a subdirectory cached; ie /foo is a dir if we
+    * know about /foo/bar */
+   p_loc->Chdir(dir_c, false);
+   int ret = Find(p_loc, "", -1, 0,0);
+   p_loc->Chdir(origdir, false);
+   if(ret)
+   {
+      xfree(origdir);
+      return 1;
+   }
+
+   /* We know this is a file or a directory if the dirname is cached and
+    * contains the basename. */
+   char *dir = xstrdup(dir_c);
+   char *sl = strrchr(dir, '/');
+   if(sl)
+   {
+      *sl = 0;
+      p_loc->Chdir(dir, false);
+   }
+   xfree(dir);
+
+   ret = -1; /* don't know */
+   const char *buf_c;
+   int bufsiz;
+   if(Find(p_loc, "", FA::LONG_LIST, &buf_c, &bufsiz))
+   {
+      FileSet *fs = p_loc->ParseLongList(buf_c, bufsiz);
+
+      FileInfo *fi=0;
+      if(fs) fi = fs->FindByName(basename_ptr(dir_c));
+      if(fi && (fi->defined&fi->TYPE))
+	 ret = (fi->filetype == fi->DIRECTORY);
+      delete fs;
+   }
+
+   p_loc->Chdir(origdir, false);
+   xfree(origdir);
+   return ret;
 }
