@@ -65,6 +65,8 @@ public:
    static void Add(FileAccess *p_loc,const char *a,int m,const Buffer *ubuf);
    static int Find(FileAccess *p_loc,const char *a,int m,const char **d, int *l);
 
+   static int IsDirectory(FileAccess *p_loc,const char *dir);
+
    enum change_mode { FILE_CHANGED, DIR_CHANGED, TREE_CHANGED };
    static void Changed(change_mode m,FileAccess *f,const char *what);
    static void FileChanged(FileAccess *f,const char *file)
